logs/analyzemft.log
Listing '.'...
Listing './bin'...
Compiling './bin/analyzeMFT.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/analyzeMFT-2.0.19.egg-info'...
Listing './lib/python3.5/site-packages/analyzemft'...
Compiling './lib/python3.5/site-packages/analyzemft/mft.py'...
***   File "./lib/python3.5/site-packages/analyzemft/mft.py", line 44
    print '-->Record number: %d\n\tMagic: %s Attribute offset: %d Flags: %s Size:%d' % (
                                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/analyzemft/mftsession.py'...
***   File "./lib/python3.5/site-packages/analyzemft/mftsession.py", line 114
    print "-f <filename> required."
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/analyzemft/mftutils.py'...
***   File "./lib/python3.5/site-packages/analyzemft/mftutils.py", line 52
    print "%s%s%s" % (sep.join("%02x" % ord(c) for c in line),
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
